# embebido

./: acel_offsets.txt  gyro_offset.txt
MPU_calibration/accel_recording/: accel_recording.py
blink_pkg/: .cproject  .project  CMakeLists.txt  package.xml
blink_pkg/src/: gpio_pub.cpp
eval1_pkg/: .cproject  .project  CMakeLists.txt  package.xml
eval1_pkg/launch/: eval.launch
eval1_pkg/src/: pins_read.cpp  subs_telop.cpp
imu_9250/src/: ROS_9250_node.py  acc_coefs.npy  gyro_coefs.npy
joy_pi/launch/: joy.launch
joy_pi/src/: joy_turtle.cpp
magnetometer/src/: ROS_magnetometer_node.py
mpu6050/: CMakeLists.txt
mpu6050/launch/: mpu_node.launch  mpu_node_cmp.launch
mpu6050/src/: read_MPU6050Pi.cpp  read_MPU6050Pi_complete.cpp
mpu92-calibration-v2/mag/: mag_cal_rotation.npy  mag_coefs.npy
plataforma_mov_pkg/: .cproject  .project  CMakeLists.txt  package.xml
plataforma_mov_pkg/launch/: joy.launch  joy_Pruebe.launch  pid_motor.launch  pose_cont.launch  pose_estimation.launch  pose_estimation_f.launch
plataforma_mov_pkg/src/: Motors.cpp  encoder.cpp  joy_teleop.cpp  mostrar.cpp  pid_link.cpp  pos_control.cpp  pose_kinematics.cpp  pub.cpp  vel_setpoint.cpp
publisher/: .cproject  .project  CMakeLists.txt  package.xml
publisher/src/: pub.cpp
record/: motorD_vel_saved.txt  motorD_vel_saved_255.txt  motorD_vel_saved_60.txt  motorI_vel_saved_255.txt  motorI_vel_saved_60.txt
record/launch/: record.launch  recordI.launch
record/src/: record.cpp
ultrasonic_py/: CMakeLists.txt
ultrasonic_py/launch/: ult.launch  ultrasonic.launch
ultrasonic_py/src/: ROS_sonar_sensor.py  ultrasonics.py
